--- a/package.json
+++ b/package.json
@@ -6,7 +6,20 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "lint": "eslint . --ext '.jsx,.js'",
+    "format": "prettier --write \"**/*.{js,jsx,json}\"",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,json}": [
+      "prettier --write"
+    ],
+    "*.{js,jsx}": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "expo": "~49.0.15",
@@ -15,7 +28,22 @@
     "react-native": "0.72.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.3.1",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.6",
+    "@types/react": "^18.2.33",
+    "@types/react-test-renderer": "^18.0.5",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.52.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.0.2",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
