--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
       "prettier --write"
     ],
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "npm run lint"
+      "eslint --fix"
     ]
   },
   "dependencies": {
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^49.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
@@ -44,6 +45,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
   "private": true
