--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
-    "extends": "@tsconfig/react-native/tsconfig.json",
-    "compilerOptions": {
-    "baseUrl": ".",
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "baseUrl": "./",
     "paths": {
-        "*": ["src/*"],
-        "@components/*": ["src/components/*"],
-        },
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"]
     }
+  }
 }
