--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     ]
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "axios": "^1.6.0",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
     "expo-status-bar": "~1.6.0",
     "jest": "^29.2.1",
     "jest-expo": "^49.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "expo-image-manipulator": "~11.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
